--- a/config/content.htm
+++ b/config/content.htm
@@ -1,6 +1,7 @@
-<h1>About</h1>
-<p>此內容管理系統以 <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 作為 submodule 運作, 可以選定對應的版本運作, cmsimde 可以持續改版, 不會影響之前設為 submodule, 使用舊版 cmsimde 模組的內容管理相關運作.</p>
-<h4>利用 cmsimde 建立靜態網誌方法:</h4>
+<h1>Member</h1>
+<p><span>第 1 組成員:</span><br/><a href="https://github.com/s40523120/cad2019">40523120 倉儲</a><span><span> </span>|<span> </span></span><a href="https://s40523120.github.io/cad2019">40523120 網站</a><br/><a href="https://github.com/s40723102/cad2019">40723102 倉儲</a><span><span> </span>|<span> </span></span><a href="https://s40723102.github.io/cad2019">40723102 網站</a><br/><a href="https://github.com/s40723110/cad2019">40723110 倉儲</a><span><span> </span>|<span> </span></span><a href="https://s40723110.github.io/cad2019">40723110 網站</a><br/><a href="https://github.com/s40723112/cad2019">40723112 倉儲</a><span><span> </span>|<span> </span></span><a href="https://s40723112.github.io/cad2019">40723112 網站</a><br/><a href="https://github.com/s40723115/cad2019">40723115 倉儲</a><span><span> </span>|<span> </span></span><a href="https://s40723115.github.io/cad2019">40723115 網站</a><br/><a href="https://github.com/s40723120/cad2019">40723120 倉儲</a><span><span> </span>|<span> </span></span><a href="https://s40723120.github.io/cad2019">40723120 網站</a><br/><a href="https://github.com/s40723127/cad2019">40723127 倉儲</a><span><span> </span>|<span> </span></span><a href="https://s40723127.github.io/cad2019">40723127 網站</a><br/><a href="https://github.com/s40723136/cad2019">40723136 倉儲</a><span><span> </span>|<span> </span></span><a href="https://s40723136.github.io/cad2019">40723136 網站</a><br/><a href="https://github.com/s40723140/cad2019">40723140 倉儲</a><span><span> </span>|<span> </span></span><a href="https://s40723140.github.io/cad2019">40723140 網站</a><br/><a href="https://github.com/s40723143/cad2019">40723143 倉儲</a><span><span> </span>|<span> </span></span><a href="https://s40723143.github.io/cad2019">40723143 網站</a><br/><a href="https://github.com/s40723146/cad2019">40723146 倉儲</a><span><span> </span>|<span> </span></span><a href="https://s40723146.github.io/cad2019">40723146 網站</a><br/><a href="https://github.com/s40723148/cad2019">40723148 倉儲</a><span><span> </span>|<span> </span></span><a href="https://s40723148.github.io/cad2019">40723148 網站</a></p>
+<h1>Task</h1>
+<h2>利用 cmsimde 建立靜態網誌方法</h2>
 <p>1. 在 github 建立倉儲, git clone 到近端</p>
 <p>2. 參考 <a href="https://github.com/mdecourse/newcms">https://github.com/mdecourse/newcms</a>, 加入除了 cmsimde 目錄外的所有內容</p>
 <p>以 git submodule add <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> cmsimde</p>
@@ -9,6 +10,35 @@
 <p>動態內容編輯完成後, 以 generate_pages 轉為靜態內容, 以 git add commit 及 push 將內容推到遠端.</p>
 <p>4. 之後若要以 git clone 取下包含 submodule 的所有內容, 執行:</p>
 <p>git clone --recurse-submodules <a href="https://github.com/mdecourse/newcms.git">https://github.com/mdecourse/newcms.git</a></p>
+<h2>Solvespace 編譯</h2>
+<h4>編譯步驟:</h4>
+<p>先將 Y:\portablegit\bin\sh.exe 改名為 sh_rename_for_solvespace.exe (透過 MSYS2 執行 shell 指令, 而非 portablegit 中的 sh.exe)</p>
+<p>git version 查驗 git 版本</p>
+<p>git 2.13 版本以上, 可以使用下列 git clone<span> </span><span>--recurse-submodules 取得所有子模組資料</span></p>
+<p>git clone --recurse-submodules https://github.com/solvespace/solvespace.git solvespace</p>
+<p>上述指令同:</p>
+<p>git clone <span><a href="https://github.com/solvespace/solvespace.git">https://github.com/solvespace/solvespace.git</a> </span></p>
+<p><span>cd solvespace</span></p>
+<p><span>git submodule init</span></p>
+<p><span>git submodule update</span></p>
+<p>edit Y:\tmp\solvespace\extlib\angle\CMakeLists.txt comment out line 713 and 714</p>
+<p>#list(APPEND ANGLE_DEFINITIONS<br/>#"-DANGLE_PRELOADED_D3DCOMPILER_MODULE_NAMES={ \"d3dcompiler_47.dll\", \"d3dcompiler_46.dll\", \"d3dcompiler_43.dll\" }")<br/>endif()</p>
+<p>接著需要手動進行 libpng.dll.a 的編譯, 並改名為 libpng_static.a, 並放到編譯系統的 lib 目錄中 (即隨身系統的 msys64\mingw64\lib 目錄):</p>
+<p>cd solvespace</p>
+<p>cd extlib</p>
+<p>cd libpng</p>
+<p>mkdir build</p>
+<p>cd build</p>
+<p>cmake .. -G "MinGW Makefiles" -DCMAKE_BUILD_TYPE=Release<br/>mingw32-make</p>
+<p>(mingw32-make -Wl,-static)</p>
+<p>rename libpng.dll.a to libpng_static.a and copy to Y:\msys64\mingw64\lib</p>
+<p>接著回到 solvespace 原始碼目錄, 建立 build 目錄後進入 build 目錄, 執行:</p>
+<p><span>cmake .. -G "MinGW Makefiles" -DCMAKE_BUILD_TYPE=Release</span><br/><span>mingw32-make</span></p>
+<p><span>編譯完成後, 可以在 build\bin 目錄中建立 solvespace.exe, 配合相關 dll 檔案後, 即可執行.</span></p>
+<h2>Solvespace 操作</h2>
+<h1>About</h1>
+<p>此內容管理系統以 <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 作為 submodule 運作, 可以選定對應的版本運作, cmsimde 可以持續改版, 不會影響之前設為 submodule, 使用舊版 cmsimde 模組的內容管理相關運作.</p>
+<h4></h4>
 <h1>Develop</h1>
 <p><a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 的開發, 可以在一個目錄中放入 cmsimde, 然後將 up_dir 中的內容放到與 cmsimde 目錄同位階的地方, 使用 command 進入 cmsimde 目錄, 執行 python wsgi.py, 就可以啟動, 以瀏覽器 https://localhost:9443 就可以連接, 以 admin 作為管理者密碼, 就可以登入維護內容.</p>
 <p>cmsimde 的開發採用 Leo Editor, 開啟 cmsimde 目錄中的 cmsimde.leo 就可以進行程式修改, 結束後, 若要保留網際內容, 只要將 cmsimde 外部的內容倒回 up_dir 目錄中即可後續對 cmsimde 遠端倉儲進行改版.</p>
