--- a/content/Solvespace 編譯.html
+++ b/content/Solvespace 編譯.html
@@ -154,9 +154,32 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='Task.html'>Next</a> >> Task<br /><h1>Member</h1>
-<p><span>第 1 組成員:</span><br/><a href="https://github.com/s40523120/cad2019">40523120 倉儲</a><span><span> </span>|<span> </span></span><a href="https://s40523120.github.io/cad2019">40523120 網站</a><br/><a href="https://github.com/s40723102/cad2019">40723102 倉儲</a><span><span> </span>|<span> </span></span><a href="https://s40723102.github.io/cad2019">40723102 網站</a><br/><a href="https://github.com/s40723110/cad2019">40723110 倉儲</a><span><span> </span>|<span> </span></span><a href="https://s40723110.github.io/cad2019">40723110 網站</a><br/><a href="https://github.com/s40723112/cad2019">40723112 倉儲</a><span><span> </span>|<span> </span></span><a href="https://s40723112.github.io/cad2019">40723112 網站</a><br/><a href="https://github.com/s40723115/cad2019">40723115 倉儲</a><span><span> </span>|<span> </span></span><a href="https://s40723115.github.io/cad2019">40723115 網站</a><br/><a href="https://github.com/s40723120/cad2019">40723120 倉儲</a><span><span> </span>|<span> </span></span><a href="https://s40723120.github.io/cad2019">40723120 網站</a><br/><a href="https://github.com/s40723127/cad2019">40723127 倉儲</a><span><span> </span>|<span> </span></span><a href="https://s40723127.github.io/cad2019">40723127 網站</a><br/><a href="https://github.com/s40723136/cad2019">40723136 倉儲</a><span><span> </span>|<span> </span></span><a href="https://s40723136.github.io/cad2019">40723136 網站</a><br/><a href="https://github.com/s40723140/cad2019">40723140 倉儲</a><span><span> </span>|<span> </span></span><a href="https://s40723140.github.io/cad2019">40723140 網站</a><br/><a href="https://github.com/s40723143/cad2019">40723143 倉儲</a><span><span> </span>|<span> </span></span><a href="https://s40723143.github.io/cad2019">40723143 網站</a><br/><a href="https://github.com/s40723146/cad2019">40723146 倉儲</a><span><span> </span>|<span> </span></span><a href="https://s40723146.github.io/cad2019">40723146 網站</a><br/><a href="https://github.com/s40723148/cad2019">40723148 倉儲</a><span><span> </span>|<span> </span></span><a href="https://s40723148.github.io/cad2019">40723148 網站</a></p>
-<br /> <a href='Task.html'>Next</a> >> Task</div>
+    <div id="tipue_search_content">利用 cmsimde 建立靜態網誌方法 << <a href='利用 cmsimde 建立靜態網誌方法.html'>Previous</a> <a href='Solvespace 操作.html'>Next</a> >> Solvespace 操作<br /><h1>Solvespace 編譯</h1>
+<h4>編譯步驟:</h4>
+<p>先將 Y:\portablegit\bin\sh.exe 改名為 sh_rename_for_solvespace.exe (透過 MSYS2 執行 shell 指令, 而非 portablegit 中的 sh.exe)</p>
+<p>git version 查驗 git 版本</p>
+<p>git 2.13 版本以上, 可以使用下列 git clone<span> </span><span>--recurse-submodules 取得所有子模組資料</span></p>
+<p>git clone --recurse-submodules https://github.com/solvespace/solvespace.git solvespace</p>
+<p>上述指令同:</p>
+<p>git clone <span><a href="https://github.com/solvespace/solvespace.git">https://github.com/solvespace/solvespace.git</a> </span></p>
+<p><span>cd solvespace</span></p>
+<p><span>git submodule init</span></p>
+<p><span>git submodule update</span></p>
+<p>edit Y:\tmp\solvespace\extlib\angle\CMakeLists.txt comment out line 713 and 714</p>
+<p>#list(APPEND ANGLE_DEFINITIONS<br/>#"-DANGLE_PRELOADED_D3DCOMPILER_MODULE_NAMES={ \"d3dcompiler_47.dll\", \"d3dcompiler_46.dll\", \"d3dcompiler_43.dll\" }")<br/>endif()</p>
+<p>接著需要手動進行 libpng.dll.a 的編譯, 並改名為 libpng_static.a, 並放到編譯系統的 lib 目錄中 (即隨身系統的 msys64\mingw64\lib 目錄):</p>
+<p>cd solvespace</p>
+<p>cd extlib</p>
+<p>cd libpng</p>
+<p>mkdir build</p>
+<p>cd build</p>
+<p>cmake .. -G "MinGW Makefiles" -DCMAKE_BUILD_TYPE=Release<br/>mingw32-make</p>
+<p>(mingw32-make -Wl,-static)</p>
+<p>rename libpng.dll.a to libpng_static.a and copy to Y:\msys64\mingw64\lib</p>
+<p>接著回到 solvespace 原始碼目錄, 建立 build 目錄後進入 build 目錄, 執行:</p>
+<p><span>cmake .. -G "MinGW Makefiles" -DCMAKE_BUILD_TYPE=Release</span><br/><span>mingw32-make</span></p>
+<p><span>編譯完成後, 可以在 build\bin 目錄中建立 solvespace.exe, 配合相關 dll 檔案後, 即可執行.</span></p>
+<br />利用 cmsimde 建立靜態網誌方法 << <a href='利用 cmsimde 建立靜態網誌方法.html'>Previous</a> <a href='Solvespace 操作.html'>Next</a> >> Solvespace 操作</div>
         
     <!-- footer -->
       <div class="container">
