--- a/config/content.htm
+++ b/config/content.htm
@@ -36,7 +36,14 @@
 <p><span>cmake .. -G "MinGW Makefiles" -DCMAKE_BUILD_TYPE=Release</span><br/><span>mingw32-make</span></p>
 <p><span>編譯完成後, 可以在 build\bin 目錄中建立 solvespace.exe, 配合相關 dll 檔案後, 即可執行.</span></p>
 <h2>Solvespace 操作</h2>
-<h1>About</h1>
+<h3>1 - 1 </h3><h2>V-REP 操作</h2>
+<p><span>學習如何完成 </span><a href="https://github.com/solvespace/solvespace">https://github.com/solvespace/solvespace</a><span> 原始碼的編譯, 並透過 </span><a href="http://solvespace.com/">http://solvespace.com</a><span> 學習如何建立<span> </span></span>web_rep2.zip<span> 中所需的行走車</span></p>
+<p><span>建立的零組件轉入 V-rep 3.6.1 rev 4.7z 後, 以網際 V-rep 模型控制進行控制.</span></p>
+<p><span>-------------------------------------------------------------------------------------------</span></p>
+<p>將 D:\.....V-REP3\V-REP_PRO_EDU\programming\remoteApiBindings\lib</p>
+<p>       \lib\Windows\64Bit裡的remoteApi.dll</p>
+<p>覆蓋 web_vrep2\web_vrep2裡的<span>remoteApi.dll</span></p>
+<h3>1 - 1 Two - Wheeler</h3><h1>About</h1>
 <p>此內容管理系統以 <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 作為 submodule 運作, 可以選定對應的版本運作, cmsimde 可以持續改版, 不會影響之前設為 submodule, 使用舊版 cmsimde 模組的內容管理相關運作.</p>
 <h4></h4>
 <h1>Develop</h1>
