--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -36,7 +36,7 @@
 <p><span>cmake .. -G "MinGW Makefiles" -DCMAKE_BUILD_TYPE=Release</span><br/><span>mingw32-make</span></p>
 <p><span>編譯完成後, 可以在 build\bin 目錄中建立 solvespace.exe, 配合相關 dll 檔案後, 即可執行.</span></p>
 <h2>Solvespace 操作</h2>
-<h3>1 - 1  Ttwo - wheeler</h3><h2>V-REP 操作</h2>
+<h3>1 - 1 </h3><h2>V-REP 操作</h2>
 <p><span>學習如何完成 </span><a href="https://github.com/solvespace/solvespace">https://github.com/solvespace/solvespace</a><span> 原始碼的編譯, 並透過 </span><a href="http://solvespace.com/">http://solvespace.com</a><span> 學習如何建立<span> </span></span>web_rep2.zip<span> 中所需的行走車</span></p>
 <p><span>建立的零組件轉入 V-rep 3.6.1 rev 4.7z 後, 以網際 V-rep 模型控制進行控制.</span></p>
 <p><span>-------------------------------------------------------------------------------------------</span></p>
