--- a/content/Blog.html
+++ b/content/Blog.html
@@ -154,8 +154,15 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Member << <a href='Member.html'>Previous</a> <a href='利用 cmsimde 建立靜態網誌方法.html'>Next</a> >> 利用 cmsimde 建立靜態網誌方法<br /><h1>Task</h1>
-<br />Member << <a href='Member.html'>Previous</a> <a href='利用 cmsimde 建立靜態網誌方法.html'>Next</a> >> 利用 cmsimde 建立靜態網誌方法</div>
+    <div id="tipue_search_content">About 更改 << <a href='About 更改.html'>Previous</a> <a href='Solvespace 操作.html'>Next</a> >> Solvespace 操作<br /><h1>Blog</h1>
+<p>--------課程筆記-----------</p>
+<p>cad2019/config/pelican.leo</p>
+<p>1.將老師倉儲的<span>pelican.leo裡的@edit base.html所有內容覆蓋自己的</span></p>
+<p><span>2.Pelican設定</span></p>
+<p><span>      共用 @edit pelocanconf.py  將名稱改為自己的</span></p>
+<p><span>       遠端 @edit pelocanconf.py SITEUR="網站"</span></p>
+<p>blog的網址是依照 @path markdown (@edit 20191031-1.md)來決定</p>
+<p>local.blog &gt; go script</p><br />About 更改 << <a href='About 更改.html'>Previous</a> <a href='Solvespace 操作.html'>Next</a> >> Solvespace 操作</div>
         
     <!-- footer -->
       <div class="container">
