--- a/content/About 更改.html
+++ b/content/About 更改.html
@@ -154,8 +154,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Member << <a href='Member.html'>Previous</a> <a href='利用 cmsimde 建立靜態網誌方法.html'>Next</a> >> 利用 cmsimde 建立靜態網誌方法<br /><h1>Task</h1>
-<br />Member << <a href='Member.html'>Previous</a> <a href='利用 cmsimde 建立靜態網誌方法.html'>Next</a> >> 利用 cmsimde 建立靜態網誌方法</div>
+    <div id="tipue_search_content">Solvespace 編譯 << <a href='Solvespace 編譯.html'>Previous</a> <a href='Blog.html'>Next</a> >> Blog<br /><h1>About 更改</h1>
+<p><span>在 Help-&gt;About 視窗中, 納入 "This Solvespace is compiled by 學號"</span></p>
+<br />Solvespace 編譯 << <a href='Solvespace 編譯.html'>Previous</a> <a href='Blog.html'>Next</a> >> Blog</div>
         
     <!-- footer -->
       <div class="container">
