--- a/content/Solvespace 操作.html
+++ b/content/Solvespace 操作.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='Member.html'>Member</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='利用 cmsimde 建立靜態網誌方法.html'>利用 cmsimde 建立靜態網誌方法</a><li><a href='Solvespace 編譯.html'>Solvespace 編譯</a><li class='has-children'><a href='Solvespace 操作.html'>Solvespace 操作</a><ul class='dropdown'><li><a href='1 - 1.html'>1 - 1</a></li></ul><li class='has-children'><a href='V-REP 操作.html'>V-REP 操作</a><ul class='dropdown'><li><a href='1 - 1 Two - Wheeler.html'>1 - 1 Two - Wheeler</a></li></li></ul></ul><li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a></li>
+                     <li><a href='Member.html'>Member</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='利用 cmsimde 建立靜態網誌方法.html'>利用 cmsimde 建立靜態網誌方法</a><li class='has-children'><a href='Solvespace 編譯.html'>Solvespace 編譯</a><ul class='dropdown'><li><a href='About 更改.html'>About 更改</a></li></ul><li><a href='Blog.html'>Blog</a><li class='has-children'><a href='Solvespace 操作.html'>Solvespace 操作</a><ul class='dropdown'><li><a href='1 - 1.html'>1 - 1</a></li></ul><li class='has-children'><a href='V-REP 操作.html'>V-REP 操作</a><ul class='dropdown'><li><a href='1 - 1 Two - Wheeler.html'>1 - 1 Two - Wheeler</a></li></li></ul></ul><li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,8 +154,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Solvespace 編譯 << <a href='Solvespace 編譯.html'>Previous</a> <a href='1 - 1.html'>Next</a> >> 1 - 1<br /><h1>Solvespace 操作</h1>
-<br />Solvespace 編譯 << <a href='Solvespace 編譯.html'>Previous</a> <a href='1 - 1.html'>Next</a> >> 1 - 1</div>
+    <div id="tipue_search_content">Blog << <a href='Blog.html'>Previous</a> <a href='1 - 1.html'>Next</a> >> 1 - 1<br /><h1>Solvespace 操作</h1>
+<br />Blog << <a href='Blog.html'>Previous</a> <a href='1 - 1.html'>Next</a> >> 1 - 1</div>
         
     <!-- footer -->
       <div class="container">
