--- a/content/V-REP and Webots.html
+++ b/content/V-REP and Webots.html
@@ -67,7 +67,7 @@
 <link type="text/css" rel="stylesheet" href="./../cmsimde/static/syntaxhighlighter/css/shCoreDefault.css"/>
 <script type="text/javascript">SyntaxHighlighter.all();</script>
 
-<!-- for LaTeX equations 暫時不用
+<!-- 啟用 LaTeX equations 編輯 -->
 <script src="https://scrum-3.github.io/web/math/MathJax.js?config=TeX-MML-AM_CHTML" type="text/javascript"></script>
 <script type="text/javascript">
 init_mathjax = function() {
@@ -88,7 +88,7 @@ init_mathjax = function() {
 }
 init_mathjax();
 </script>
--->
+
 <!-- 暫時不用
 <script src="./../cmsimde/static/fengari-web.js"></script>
 <script type="text/javascript" src="./../cmsimde/static/Cango-13v08-min.js"></script>
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='Member.html'>Member</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='利用 cmsimde 建立靜態網誌方法.html'>利用 cmsimde 建立靜態網誌方法</a><li class='has-children'><a href='Solvespace 編譯.html'>Solvespace 編譯</a><ul class='dropdown'><li><a href='About 更改.html'>About 更改</a></li></ul><li><a href='Blog.html'>Blog</a><li class='has-children'><a href='Solvespace 操作.html'>Solvespace 操作</a><ul class='dropdown'><li><a href='1 - 1.html'>1 - 1</a></li></ul><li class='has-children'><a href='V-REP 操作.html'>V-REP 操作</a><ul class='dropdown'><li><a href='1 - 1 Two - Wheeler.html'>1 - 1 Two - Wheeler</a></li></li></ul></ul><li class='has-children'><a href='期末.html'>期末</a><ul class='dropdown'><li><a href='組員工作分配.html'>組員工作分配</a><li><a href='繪圖.html'>繪圖</a><li><a href='V-REP and Webots.html'>V-REP and Webots</a><li><a href='教科書.html'>教科書</a></li></ul><li><a href='About.html'>About</a></li>
+                     <li><a href='Member.html'>Member</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='利用 cmsimde 建立靜態網誌方法.html'>利用 cmsimde 建立靜態網誌方法</a><li class='has-children'><a href='Solvespace 編譯.html'>Solvespace 編譯</a><ul class='dropdown'><li><a href='About 更改.html'>About 更改</a></li></ul><li><a href='Blog.html'>Blog</a><li class='has-children'><a href='Solvespace 操作.html'>Solvespace 操作</a><ul class='dropdown'><li><a href='1 - 1.html'>1 - 1</a></li></ul><li class='has-children'><a href='V-REP 操作.html'>V-REP 操作</a><ul class='dropdown'><li><a href='1 - 1 Two - Wheeler.html'>1 - 1 Two - Wheeler</a></li></li></ul></ul><li class='has-children'><a href='期末.html'>期末</a><ul class='dropdown'><li><a href='組員工作分配.html'>組員工作分配</a><li class='has-children'><a href='繪圖.html'>繪圖</a><ul class='dropdown'><li><a href='NX繪圖.html'>NX繪圖</a></li></ul><li><a href='V-REP and Webots.html'>V-REP and Webots</a><li><a href='教科書.html'>教科書</a></li></ul><li><a href='About.html'>About</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,8 +154,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">繪圖 << <a href='繪圖.html'>Previous</a> <a href='教科書.html'>Next</a> >> 教科書<br /><h1>V-REP and Webots</h1>
-<br />繪圖 << <a href='繪圖.html'>Previous</a> <a href='教科書.html'>Next</a> >> 教科書</div>
+    <div id="tipue_search_content">NX繪圖 << <a href='NX繪圖.html'>Previous</a> <a href='教科書.html'>Next</a> >> 教科書<br /><h1>V-REP and Webots</h1>
+<br />NX繪圖 << <a href='NX繪圖.html'>Previous</a> <a href='教科書.html'>Next</a> >> 教科書</div>
         
     <!-- footer -->
       <div class="container">
