--- a/content/繪圖.html
+++ b/content/繪圖.html
@@ -67,7 +67,7 @@
 <link type="text/css" rel="stylesheet" href="./../cmsimde/static/syntaxhighlighter/css/shCoreDefault.css"/>
 <script type="text/javascript">SyntaxHighlighter.all();</script>
 
-<!-- for LaTeX equations 暫時不用
+<!-- 啟用 LaTeX equations 編輯 -->
 <script src="https://scrum-3.github.io/web/math/MathJax.js?config=TeX-MML-AM_CHTML" type="text/javascript"></script>
 <script type="text/javascript">
 init_mathjax = function() {
@@ -88,7 +88,7 @@ init_mathjax = function() {
 }
 init_mathjax();
 </script>
--->
+
 <!-- 暫時不用
 <script src="./../cmsimde/static/fengari-web.js"></script>
 <script type="text/javascript" src="./../cmsimde/static/Cango-13v08-min.js"></script>
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='Member.html'>Member</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='利用 cmsimde 建立靜態網誌方法.html'>利用 cmsimde 建立靜態網誌方法</a><li class='has-children'><a href='Solvespace 編譯.html'>Solvespace 編譯</a><ul class='dropdown'><li><a href='About 更改.html'>About 更改</a></li></ul><li><a href='Blog.html'>Blog</a><li class='has-children'><a href='Solvespace 操作.html'>Solvespace 操作</a><ul class='dropdown'><li><a href='1 - 1.html'>1 - 1</a></li></ul><li class='has-children'><a href='V-REP 操作.html'>V-REP 操作</a><ul class='dropdown'><li><a href='1 - 1 Two - Wheeler.html'>1 - 1 Two - Wheeler</a></li></li></ul></ul><li class='has-children'><a href='期末.html'>期末</a><ul class='dropdown'><li><a href='組員工作分配.html'>組員工作分配</a><li><a href='繪圖.html'>繪圖</a><li><a href='V-REP and Webots.html'>V-REP and Webots</a><li><a href='教科書.html'>教科書</a></li></ul><li><a href='About.html'>About</a></li>
+                     <li><a href='Member.html'>Member</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='利用 cmsimde 建立靜態網誌方法.html'>利用 cmsimde 建立靜態網誌方法</a><li class='has-children'><a href='Solvespace 編譯.html'>Solvespace 編譯</a><ul class='dropdown'><li><a href='About 更改.html'>About 更改</a></li></ul><li><a href='Blog.html'>Blog</a><li class='has-children'><a href='Solvespace 操作.html'>Solvespace 操作</a><ul class='dropdown'><li><a href='1 - 1.html'>1 - 1</a></li></ul><li class='has-children'><a href='V-REP 操作.html'>V-REP 操作</a><ul class='dropdown'><li><a href='1 - 1 Two - Wheeler.html'>1 - 1 Two - Wheeler</a></li></li></ul></ul><li class='has-children'><a href='期末.html'>期末</a><ul class='dropdown'><li><a href='組員工作分配.html'>組員工作分配</a><li class='has-children'><a href='繪圖.html'>繪圖</a><ul class='dropdown'><li><a href='NX繪圖.html'>NX繪圖</a></li></ul><li><a href='V-REP and Webots.html'>V-REP and Webots</a><li><a href='教科書.html'>教科書</a></li></ul><li><a href='About.html'>About</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,14 +154,14 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">組員工作分配 << <a href='組員工作分配.html'>Previous</a> <a href='V-REP and Webots.html'>Next</a> >> V-REP and Webots<br /><h1>繪圖</h1>
+    <div id="tipue_search_content">組員工作分配 << <a href='組員工作分配.html'>Previous</a> <a href='NX繪圖.html'>Next</a> >> NX繪圖<br /><h1>繪圖</h1>
 <p>以下是課程中所列重點</p>
 <p><span>1 . 兩人分別用 Solvespace   和  NX 建立零組件，錄製繪圖過程並建構出零組件後與V-REP、Webots組做</span><span>結合。</span></p>
 <p><span>2 .  NX繪圖者匯出零件後分析零件應力分析，再和Webots的應力分析做比較，得出差異性。</span></p>
 <p><span>----------------------------------------------------------</span></p>
 <p><span>課程筆記</span></p>
 <p><span>將練習影片加上說明字幕, 以校名+系名+課程名稱+分組任務名稱+學號作為標題, 上傳 Youtube 後, 分別嵌入個人與分組網頁中.</span></p>
-<br />組員工作分配 << <a href='組員工作分配.html'>Previous</a> <a href='V-REP and Webots.html'>Next</a> >> V-REP and Webots</div>
+<br />組員工作分配 << <a href='組員工作分配.html'>Previous</a> <a href='NX繪圖.html'>Next</a> >> NX繪圖</div>
         
     <!-- footer -->
       <div class="container">
