--- a/content/第八章.html
+++ b/content/第八章.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='Member.html'>Member</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='利用 cmsimde 建立靜態網誌方法.html'>利用 cmsimde 建立靜態網誌方法</a><li class='has-children'><a href='Solvespace 編譯.html'>Solvespace 編譯</a><ul class='dropdown'><li><a href='About 更改.html'>About 更改</a></li></ul><li><a href='Blog.html'>Blog</a><li class='has-children'><a href='Solvespace 操作.html'>Solvespace 操作</a><ul class='dropdown'><li><a href='1 - 1.html'>1 - 1</a></li></ul><li class='has-children'><a href='V-REP 操作.html'>V-REP 操作</a><ul class='dropdown'><li><a href='1 - 1 Two - Wheeler.html'>1 - 1 Two - Wheeler</a></li></li></ul></ul><li class='has-children'><a href='期末.html'>期末</a><ul class='dropdown'><li><a href='組員工作分配.html'>組員工作分配</a><li class='has-children'><a href='繪圖.html'>繪圖</a><ul class='dropdown'><li><a href='NX繪圖.html'>NX繪圖</a></li></ul><li><a href='V-REP and Webots.html'>V-REP and Webots</a><li><a href='教科書.html'>教科書</a></li></ul><li><a href='About.html'>About</a></li>
+                     <li><a href='Member.html'>Member</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='利用 cmsimde 建立靜態網誌方法.html'>利用 cmsimde 建立靜態網誌方法</a><li class='has-children'><a href='Solvespace 編譯.html'>Solvespace 編譯</a><ul class='dropdown'><li><a href='About 更改.html'>About 更改</a></li></ul><li><a href='Blog.html'>Blog</a><li class='has-children'><a href='Solvespace 操作.html'>Solvespace 操作</a><ul class='dropdown'><li><a href='1 - 1.html'>1 - 1</a></li></ul><li class='has-children'><a href='V-REP 操作.html'>V-REP 操作</a><ul class='dropdown'><li><a href='1 - 1 Two - Wheeler.html'>1 - 1 Two - Wheeler</a></li></li></ul></ul><li><a href='組員工作分配.html'>組員工作分配</a><li class='has-children'><a href='繪圖.html'>繪圖</a><ul class='dropdown'><li><a href='NX繪圖.html'>NX繪圖</a></li></ul><li class='has-children'><a href='教科書.html'>教科書</a><ul class='dropdown'><li><a href='NX應力分析.html'>NX應力分析</a><li><a href='第八章.html'>第八章</a></li></ul><li><a href='About.html'>About</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,8 +154,14 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">NX繪圖 << <a href='NX繪圖.html'>Previous</a> <a href='教科書.html'>Next</a> >> 教科書<br /><h1>V-REP and Webots</h1>
-<br />NX繪圖 << <a href='NX繪圖.html'>Previous</a> <a href='教科書.html'>Next</a> >> 教科書</div>
+    <div id="tipue_search_content">NX應力分析 << <a href='NX應力分析.html'>Previous</a> <a href='About.html'>Next</a> >> About<br /><h1>第八章</h1>
+<p>第八章 有限元素分析</p>
+<p>有限元素分析（<span>FEA</span>）是有限元素方法（<span>FEM</span>）的實際運用，他用於對結構或流體所施加的因素<span>(</span>例如力、壓力、熱量和振動<span>)</span>來做出反應行為。</p>
+<p>通常，開始的過程都會先從創建幾何模型開始，之後再將模型細分(網狀化)成許多在特定的節點上連結在一起的簡單幾何形狀的小塊(元素)，而材料的性質和限制條件也會應用在元素上。</p>
+<p>在最後，許多軟體像是NX12都能解決有限元素分析（<span>FEA</span>）的問題並將結果輸出且可視化。有限元素分析（<span>FEA</span>）能夠幫助工程師在製造和測試前，更加了解產品的性能。</p>
+<p>有限元素分析（<span>FEA</span>）的應用包括結構分析、熱分析、流體力學和電磁兼容性</p>
+<p>其中，有限元素分析（<span>FEA</span>）最常用於結構和固體力學，並應用於計算機械性能（例如應力和位移）。這些（應力和位移）的計算對機械部件的性能非常重要，甚至能夠預防故障。</p>
+<p>本章中，我們將處理實體零件的結構應力和應變分析。</p><br />NX應力分析 << <a href='NX應力分析.html'>Previous</a> <a href='About.html'>Next</a> >> About</div>
         
     <!-- footer -->
       <div class="container">
