--- a/content/組員工作分配.html
+++ b/content/組員工作分配.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='Member.html'>Member</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='利用 cmsimde 建立靜態網誌方法.html'>利用 cmsimde 建立靜態網誌方法</a><li class='has-children'><a href='Solvespace 編譯.html'>Solvespace 編譯</a><ul class='dropdown'><li><a href='About 更改.html'>About 更改</a></li></ul><li><a href='Blog.html'>Blog</a><li class='has-children'><a href='Solvespace 操作.html'>Solvespace 操作</a><ul class='dropdown'><li><a href='1 - 1.html'>1 - 1</a></li></ul><li class='has-children'><a href='V-REP 操作.html'>V-REP 操作</a><ul class='dropdown'><li><a href='1 - 1 Two - Wheeler.html'>1 - 1 Two - Wheeler</a></li></li></ul></ul><li class='has-children'><a href='期末.html'>期末</a><ul class='dropdown'><li><a href='組員工作分配.html'>組員工作分配</a><li class='has-children'><a href='繪圖.html'>繪圖</a><ul class='dropdown'><li><a href='NX繪圖.html'>NX繪圖</a></li></ul><li><a href='V-REP and Webots.html'>V-REP and Webots</a><li><a href='教科書.html'>教科書</a></li></ul><li><a href='About.html'>About</a></li>
+                     <li><a href='Member.html'>Member</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='利用 cmsimde 建立靜態網誌方法.html'>利用 cmsimde 建立靜態網誌方法</a><li class='has-children'><a href='Solvespace 編譯.html'>Solvespace 編譯</a><ul class='dropdown'><li><a href='About 更改.html'>About 更改</a></li></ul><li><a href='Blog.html'>Blog</a><li class='has-children'><a href='Solvespace 操作.html'>Solvespace 操作</a><ul class='dropdown'><li><a href='1 - 1.html'>1 - 1</a></li></ul><li class='has-children'><a href='V-REP 操作.html'>V-REP 操作</a><ul class='dropdown'><li><a href='1 - 1 Two - Wheeler.html'>1 - 1 Two - Wheeler</a></li></li></ul></ul><li><a href='組員工作分配.html'>組員工作分配</a><li class='has-children'><a href='繪圖.html'>繪圖</a><ul class='dropdown'><li><a href='NX繪圖.html'>NX繪圖</a></li></ul><li class='has-children'><a href='教科書.html'>教科書</a><ul class='dropdown'><li><a href='NX應力分析.html'>NX應力分析</a><li><a href='第八章.html'>第八章</a></li></ul><li><a href='About.html'>About</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,13 +154,12 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">期末 << <a href='期末.html'>Previous</a> <a href='繪圖.html'>Next</a> >> 繪圖<br /><h1>組員工作分配</h1>
+    <div id="tipue_search_content">1 - 1 Two - Wheeler << <a href='1 - 1 Two - Wheeler.html'>Previous</a> <a href='繪圖.html'>Next</a> >> 繪圖<br /><h1>組員工作分配</h1>
 <p><span>1 . 以分組協同方式整理教科書內容</span></p>
 <p><span>2 . </span><span>處理 content.htm, reveal 簡報以及 pelican 網誌 markdown 中的改版衝突</span></p>
 <p><span>3 . NX及SolveSpace 繪圖 </span></p>
 <p><span>4 . V-rep 與 Webots Tutorial, 分別利用 Solvespace 與 NX 建立零組件轉入</span></p>
-<p></p>
-<br />期末 << <a href='期末.html'>Previous</a> <a href='繪圖.html'>Next</a> >> 繪圖</div>
+<p></p><br />1 - 1 Two - Wheeler << <a href='1 - 1 Two - Wheeler.html'>Previous</a> <a href='繪圖.html'>Next</a> >> 繪圖</div>
         
     <!-- footer -->
       <div class="container">
