--- a/content/SloveSpace繪圖.html
+++ b/content/SloveSpace繪圖.html
@@ -156,6 +156,45 @@ img.add_border {
         </header>
     <div id="tipue_search_content">NX繪圖 << <a href='NX繪圖.html'>Previous</a> <a href='教科書.html'>Next</a> >> 教科書<br /><h1>SloveSpace繪圖</h1>
 <p>繪製及組合自走車練習</p>
+<p><span>----------------------------------------------------------------------------------</span></p>
+<p>輪子</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/AGFBb_U0guo" width="400"></iframe></p>
+<p><span>----------------------------------------------------------------------------------</span></p>
+<p><span>連接桿1</span></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/hThQlmKK-mY" width="400"></iframe></p>
+<p><span>----------------------------------------------------------------------------------</span></p>
+<p><span>連接桿2</span></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/kJiNIg9Camg" width="400"></iframe></p>
+<p>----------------------------------------------------------------------------------</p>
+<p><span>連接桿3</span></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/0t-AgEuAauU" width="400"></iframe></p>
+<p><span>----------------------------------------------------------------------------------</span></p>
+<p><span>連接桿4</span></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/PZljmNMVJJs" width="400"></iframe></p>
+<p><span>----------------------------------------------------------------------------------</span></p>
+<p>自走車側板</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/JNbQvsdMWgo" width="400"></iframe></p>
+<p><span>----------------------------------------------------------------------------------</span></p>
+<p><span>自走車前後板</span></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/XsHPuaXAFaU" width="400"></iframe></p>
+<p><span>----------------------------------------------------------------------------------</span></p>
+<p>側板連接件</p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/1tSY9ND89sk" width="400"></iframe></span></p>
+<p><span>----------------------------------------------------------------------------------</span></p>
+<p><span>組合第一部分</span></p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/AUBk-e7syDc" width="400"></iframe></span></p>
+<p><span>----------------------------------------------------------------------------------</span></p>
+<p><span>組合第二部分</span></p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/8QhZwO8v1sY" width="400"></iframe></span></p>
+<p><span>----------------------------------------------------------------------------------</span></p>
+<p><span>組合第三部分</span></p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/zKVguSLmZxk" width="400"></iframe></span></p>
+<p><span>----------------------------------------------------------------------------------</span></p>
+<p><span>組合第四部分</span></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/FiCEG0G2pfk" width="400"></iframe></p>
+<p><span>----------------------------------------------------------------------------------</span></p>
+<p><span>組合展示</span></p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/2RZ1kI_X8OU" width="400"></iframe></span></p>
 <p></p><br />NX繪圖 << <a href='NX繪圖.html'>Previous</a> <a href='教科書.html'>Next</a> >> 教科書</div>
         
     <!-- footer -->
