--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -102,7 +102,9 @@
 <p><br/><br/><br/></p>
 <h2>SloveSpace繪圖</h2>
 <p>繪製及組合自走車練習</p>
-<p></p>
+<p><span>----------------------------------------------------------------------------------</span></p>
+<p>輪子</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/AGFBb_U0guo" width="400"></iframe></p>
 <p><span>----------------------------------------------------------------------------------</span></p>
 <p><span>連接桿1</span></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/hThQlmKK-mY" width="400"></iframe></p>
@@ -122,7 +124,11 @@
 <p><span>自走車前後板</span></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/XsHPuaXAFaU" width="400"></iframe></p>
 <p><span>----------------------------------------------------------------------------------</span></p>
+<p>側板連接件</p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/1tSY9ND89sk" width="400"></iframe></span></p>
+<p><span>----------------------------------------------------------------------------------</span></p>
 <p><span>組合第一部分</span></p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/AUBk-e7syDc" width="400"></iframe></span></p>
 <p><span>----------------------------------------------------------------------------------</span></p>
 <p><span>組合第二部分</span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/8QhZwO8v1sY" width="400"></iframe></span></p>
