--- a/content/教學內容.html
+++ b/content/教學內容.html
@@ -154,8 +154,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">教科書 << <a href='教科書.html'>Previous</a> <a href='第八章.html'>Next</a> >> 第八章<br /><h1>NX應力分析</h1>
-<br />教科書 << <a href='教科書.html'>Previous</a> <a href='第八章.html'>Next</a> >> 第八章</div>
+    <div id="tipue_search_content">第八章 << <a href='第八章.html'>Previous</a> <a href='About.html'>Next</a> >> About<br /><h1>教學內容</h1>
+<p>建立節點</p>
+<br />第八章 << <a href='第八章.html'>Previous</a> <a href='About.html'>Next</a> >> About</div>
         
     <!-- footer -->
       <div class="container">
