--- a/config/content.htm
+++ b/config/content.htm
@@ -158,7 +158,62 @@
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Ya1RppQ38p8" width="400"></iframe></span></p>
 <p><span>---------------------------------------------------------------------------------------</span></p>
 <p><span><img alt="" height="280" src="/images/6.png" width="300"/></span></p>
-<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/hd3wI90V7qo" width="400"></iframe></span></p><h1>教科書</h1>
+<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/hd3wI90V7qo" width="400"></iframe></span></p>
+<h2>繪圖軟體差異性</h2>
+<p>我們這次使用了四種不同的繪圖軟體來繪製，而下列會寫出使用的心得並</p>
+<p>分別提出他們的優點及缺點，有些繪圖軟體有其他功能，</p>
+<p>但我們幾乎都只使用''繪圖、繪製零件''的功能，所以在此只比較他們的繪製差異性。</p>
+<p>------------------------------------------------------------------------------------------------------</p>
+<p><strong>Inventor2019:</strong><span> </span>繪製過程沒什麼太大問題，繪製完線條之後才進行標註約束，讓他成為我們指定的形狀及尺寸之後再去做擠出成型的動作。</p>
+<p><strong>NX12 : </strong>不知道是不是工作環境的問題，繪製過程常常卡頓，和其他的繪圖難體多花了一些時間，繪製線條完之後都會先以基準線XYZ去做標註的動作，。</p>
+<p><strong>SolveSpace : </strong>跑起來最為流暢，可惜功能不多，標註、繪製的限制較多(線與線的標註、平面的選定)。</p>
+<p><strong>Onshape :<span> </span></strong>需要註冊，繪製起來最順手，介面功能清楚，隨時雲端存檔，可以直接讓別人觀看你所繪製的零組件。</p>
+<p><span>------------------------------------------------------------------------------------------------------</span></p>
+<table>
+<tbody>
+<tr>
+<td></td>
+<td>繪圖時間(難易度)</td>
+<td>功能性</td>
+<td>特色</td>
+</tr>
+<tr>
+<td><strong>Inventor2019</strong></td>
+<td>一般(中等)</td>
+<td>
+<p>繪圖、模擬、組合</p>
+</td>
+<td><span>3D部分(組合、模擬)較強</span></td>
+</tr>
+<tr>
+<td><strong>NX12</strong></td>
+<td>較久(難)</td>
+<td>
+<p>繪圖、模擬、組合、後處理</p>
+</td>
+<td><span>整合設計、模擬與製造</span></td>
+</tr>
+<tr>
+<td><strong>SolveSpace</strong></td>
+<td>一般(中上)</td>
+<td><span>繪圖、組合</span></td>
+<td>
+<p>檔案大小 小</p>
+</td>
+</tr>
+<tr>
+<td>
+<p><strong>Onshape</strong></p>
+</td>
+<td>快(簡單)</td>
+<td><span>繪圖、組合</span></td>
+<td>
+<p>不須安裝</p>
+<p>檔案隨時存檔在雲端</p>
+</td>
+</tr>
+</tbody>
+</table><h1>教科書</h1>
 <h3>NX應力分析</h3>
 <p>第八章</p>
 <p>第八章 有限元素分析</p>
