--- a/content/Onshape繪圖.html
+++ b/content/Onshape繪圖.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='Member.html'>Member</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='利用 cmsimde 建立靜態網誌方法.html'>利用 cmsimde 建立靜態網誌方法</a><li class='has-children'><a href='Solvespace 編譯.html'>Solvespace 編譯</a><ul class='dropdown'><li><a href='About 更改.html'>About 更改</a></li></ul><li><a href='Blog.html'>Blog</a><li class='has-children'><a href='Solvespace 操作.html'>Solvespace 操作</a><ul class='dropdown'><li><a href='1 - 1.html'>1 - 1</a></li></ul><li class='has-children'><a href='V-REP 操作.html'>V-REP 操作</a><ul class='dropdown'><li><a href='1 - 1 Two - Wheeler.html'>1 - 1 Two - Wheeler</a></li></li></ul></ul><li><a href='組員工作分配.html'>組員工作分配</a><li class='has-children'><a href='繪圖.html'>繪圖</a><ul class='dropdown'><li><a href='NX繪圖.html'>NX繪圖</a><li><a href='SloveSpace繪圖.html'>SloveSpace繪圖</a><li><a href='Onshape繪圖.html'>Onshape繪圖</a></li></ul><li class='has-children'><a href='教科書.html'>教科書</a><ul class='dropdown'><li><a href='NX應力分析.html'>NX應力分析</a><li class='has-children'><a href='教學內容.html'>教學內容</a><ul class='dropdown'><li><a href='重點整理.html'>重點整理</a></li></li></ul></ul><li><a href='About.html'>About</a></li>
+                     <li><a href='Member.html'>Member</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='利用 cmsimde 建立靜態網誌方法.html'>利用 cmsimde 建立靜態網誌方法</a><li class='has-children'><a href='Solvespace 編譯.html'>Solvespace 編譯</a><ul class='dropdown'><li><a href='About 更改.html'>About 更改</a></li></ul><li><a href='Blog.html'>Blog</a><li class='has-children'><a href='Solvespace 操作.html'>Solvespace 操作</a><ul class='dropdown'><li><a href='1 - 1.html'>1 - 1</a></li></ul><li class='has-children'><a href='V-REP 操作.html'>V-REP 操作</a><ul class='dropdown'><li><a href='1 - 1 Two - Wheeler.html'>1 - 1 Two - Wheeler</a></li></li></ul></ul><li><a href='組員工作分配.html'>組員工作分配</a><li class='has-children'><a href='繪圖.html'>繪圖</a><ul class='dropdown'><li><a href='NX繪圖.html'>NX繪圖</a><li><a href='SloveSpace繪圖.html'>SloveSpace繪圖</a><li><a href='Onshape繪圖.html'>Onshape繪圖</a><li><a href='繪圖軟體差異性.html'>繪圖軟體差異性</a></li></ul><li class='has-children'><a href='教科書.html'>教科書</a><ul class='dropdown'><li><a href='NX應力分析.html'>NX應力分析</a><li class='has-children'><a href='教學內容.html'>教學內容</a><ul class='dropdown'><li><a href='重點整理.html'>重點整理</a></li></li></ul></ul><li><a href='About.html'>About</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,7 +154,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">SloveSpace繪圖 << <a href='SloveSpace繪圖.html'>Previous</a> <a href='教科書.html'>Next</a> >> 教科書<br /><h1>Onshape繪圖</h1>
+    <div id="tipue_search_content">SloveSpace繪圖 << <a href='SloveSpace繪圖.html'>Previous</a> <a href='繪圖軟體差異性.html'>Next</a> >> 繪圖軟體差異性<br /><h1>Onshape繪圖</h1>
 <p><img alt="" height="288" src="./../images/1.png" width="300"/></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/8_K92yEd_-A" width="400"></iframe></p>
 <p><span>---------------------------------------------------------------------------------------</span></p>
@@ -171,7 +171,8 @@ img.add_border {
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Ya1RppQ38p8" width="400"></iframe></span></p>
 <p><span>---------------------------------------------------------------------------------------</span></p>
 <p><span><img alt="" height="280" src="./../images/6.png" width="300"/></span></p>
-<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/hd3wI90V7qo" width="400"></iframe></span></p><br />SloveSpace繪圖 << <a href='SloveSpace繪圖.html'>Previous</a> <a href='教科書.html'>Next</a> >> 教科書</div>
+<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/hd3wI90V7qo" width="400"></iframe></span></p>
+<br />SloveSpace繪圖 << <a href='SloveSpace繪圖.html'>Previous</a> <a href='繪圖軟體差異性.html'>Next</a> >> 繪圖軟體差異性</div>
         
     <!-- footer -->
       <div class="container">
