--- a/content/期末影片.html
+++ b/content/期末影片.html
@@ -154,14 +154,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">1 - 1 << <a href='1 - 1.html'>Previous</a> <a href='1 - 1 Two - Wheeler.html'>Next</a> >> 1 - 1 Two - Wheeler<br /><h1>V-REP 操作</h1>
-<p><span>學習如何完成 </span><a href="https://github.com/solvespace/solvespace">https://github.com/solvespace/solvespace</a><span> 原始碼的編譯, 並透過 </span><a href="http://solvespace.com/">http://solvespace.com</a><span> 學習如何建立<span> </span></span>web_rep2.zip<span> 中所需的行走車</span></p>
-<p><span>建立的零組件轉入 V-rep 3.6.1 rev 4.7z 後, 以網際 V-rep 模型控制進行控制.</span></p>
-<p><span>-------------------------------------------------------------------------------------------</span></p>
-<p>將 D:\.....V-REP3\V-REP_PRO_EDU\programming\remoteApiBindings\lib</p>
-<p>       \lib\Windows\64Bit裡的remoteApi.dll</p>
-<p>覆蓋 web_vrep2\web_vrep2裡的<span>remoteApi.dll</span></p>
-<br />1 - 1 << <a href='1 - 1.html'>Previous</a> <a href='1 - 1 Two - Wheeler.html'>Next</a> >> 1 - 1 Two - Wheeler</div>
+    <div id="tipue_search_content">重點整理 << <a href='重點整理.html'>Previous</a> <a href='About.html'>Next</a> >> About<br /><h1>期末影片</h1>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/ozow-EwntCc" width="500"></iframe></p><br />重點整理 << <a href='重點整理.html'>Previous</a> <a href='About.html'>Next</a> >> About</div>
         
     <!-- footer -->
       <div class="container">
